# Smart_Products_ME5194

lab2/lab2_post_1/: I2C_Slave.cpp  I2C_Slave.h  Lab2_post_Q1  Output of I2C Program.docx  lab2_post_Q1  lab2_post_Q1.cpp
lab2/lab2_post_2/: SPI_Slave.cpp  SPI_Slave.h  lab2_post_Q2  lab2_post_Q2.cpp
lab2/lab_2_1/: lab2_Q1  lab2_Q1.cpp  lab2_gpio.cpp  lab2_gpio.h  lab2_gpio.h.gch
lab3/: Pseudocode for FPGA Conditions.txt  aux_func.cpp  lab3_main.cpp  setup_program.cpp
lab3/Make_folder/: Makefile  interrupt_module_mmap.c
lab4/: Protocol.cpp  lab4_main  lab4_main.cpp
lab5/src/: CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  LidarLite.cpp  LidarLite.h  Makefile  PanTilt.cpp  PanTilt.h  SLAM.cpp  SLAM.h  Slam  Viz.cpp  Viz.h  cmake_install.cmake  lab5_main.cpp
lab6/Matlab/: Key_Points1.txt  corners1.txt  main.m  main.m~
lab6/OpenMV/: main.cpp
lab7/Matlab/: Key_Points.txt  MATRIX.xlsx  corners1.txt  corners2.txt  corners3.txt  main.m  main.m~  main1.m
lab7/OpenMV/: CollectionKeypoints.py  CollectionKeypoints.py.autosave  Lab_1.cpp  Matrix.cpp  Matrix.h  Packet.cpp  UartComm.py  command.cpp  main  main.cpp  main.py
lab7/Robot Stuff/: Robot.cpp  Robot.h
lab8/: DCMotor.cpp  DCMotor.h  DCMotor_old.cpp  GPIO  GPIO.cpp  GPIO.h  GPIO.h.gch  MotorPlate.cpp  MotorPlate.h  Signal_History.txt  main  main.cpp
servo_project/: main.py
